# pyproot

./: README.md  pyproject.toml
pyproot/: __init__.py  __main__.py  binary.py  core.py  exceptions.py
pyproot/binaries/: README
scripts/: download_binaries.py
tests/: test_pyproot.py
