[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproot"
version = "0.1.0"
description = "Python wrapper for proot with bundled static binaries"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["proot", "chroot", "container", "sandbox", "rootfs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Operating System",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No mandatory runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
pyproot = "pyproot.__main__:main"

[project.urls]
Homepage = "https://github.com/yourname/pyproot"
Issues = "https://github.com/yourname/pyproot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyproot*"]

[tool.setuptools.package-data]
"pyproot.binaries" = ["proot-*"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
